fix: progress bar 被 sticky 头部遮挡

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,6 +10,9 @@ button {
     background-color: transparent;
 }
 
+.bprogress {
+  transition: none !important;
+}
 
 ::-webkit-scrollbar {
   width: 6px;
